--- a/ENERGETIC/templates/editar.html
+++ b/ENERGETIC/templates/editar.html
@@ -23,6 +23,7 @@
         <p>Hora da coleta: <input type="time" name="hora_registro_usuario" required></p>
         <p>Hora do Registro (APP Placas): <input type="time" name="hora_registro_placas" required></p>
         <button type="submit" name="editar">Editar Registro</button>
+        <button type="submit" name="excluir">Excluir Registro</button>
     </form>
 </body>
 </html>
