botao_de_exportar

--- a/ENERGETIC/templates/home.html
+++ b/ENERGETIC/templates/home.html
@@ -21,6 +21,9 @@
     <form action="/limpar" method="POST">
         <button type="submit">Limpar Dados</button>
     </form>
+    <form action="/exportar" method="GET">
+        <button type="submit">Exportar CSV</button>
+    </form>
     <p><a href="/editar">Editar Registros</a></p>
     {% if resultado %}
     <div id="resultado">
